# actix-todos

./: .env  Cargo.toml  Dockerfile  database.sql  docker-compose.yml  init_data.sql
src/: config.rs  db.rs  db_diesel.rs  handlers.rs  main.rs  models.rs
